osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_entity/test_entity_literal_only_one_level_deep_name_resolution.txt
2 errors occurred while validating:
[1/2] error: invalid argument type: `Name`
--> main.sml:4:8
     |
   4 | Path2 = Path
     |         ^ expected type `String`
[2/2] error: invalid argument type: `Name`
--> main.sml:5:8
     |
   5 | Type2 = Type
     |         ^ expected type `String`
